[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-test-generator"
version = "0.1.0"
description = "A demo tool to generate tests for existing Python projects using Claude Code SDK"
authors = [
    {name = "Gilbert Hernandez", email = "gahernandez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "claude-code-sdk>=0.0.14",
    "python-dotenv>=1.0.0",
    "anyio>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[project.scripts]
claude-test-generator = "claude_test_generator:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "."]
python_files = ["test_*.py", "*_test.py"]